Fixed mars moon image stretching on mobile

--- a/styles/layout/_explore.scss
+++ b/styles/layout/_explore.scss
@@ -101,6 +101,7 @@
   flex: 1 1 auto;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
 }
 
 .explore-mars-row {
